2004-08-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (scan_file): Update "#Extending%20aclocal" URL, makeinfo
	4.7 now outputs "#Extending-aclocal".

2004-08-01  Alexandre Duret-Lutz  <adl@gnu.org>
	    Derek R. Price  <derek@ximbiot.com>

	Disable Lex and Yacc rules whenever possible if AM_MAINTAINER_MODE
	is used and maintainer-mode disabled.
	* automake.in (Automake::struct): Define nodist_specific.
	Set it in languages yacc, yaccxx, lex, and lexxx.
	(register_language): Default nodist_specific to 0.
	(handle_single_transform): Honor nodist_specific.
	* lib/am/yacc.am (am__skipyacc): Define this in maintainer mode.
	(%EXT%%DERIVED-EXT%, %OBJ%): Use $(am__skipyacc) to disable these
	rules when needed.
	* lib/am/lex.am (am__skiplex): Define this in maintainer mode.
	(%EXT%%DERIVED-EXT%, %OBJ%): Use $(am__skiplex) to disable these
	rules when needed.
	* tests/mmodely.test: New file.
	* tests/pr204.test: Augment to check AM_MAINTAINER_MODE and nodist_
	parsers.
	* tests/Makefile.am (TESTS): ADd mmodely.test.
	* doc/automake.texi (Yacc and Lex): Note dependence on maintainer mode.

2004-07-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9a.

	* configure.ac, NEWS: Bump version to 1.9.

	* automake.in (generate_makefile): Update misleading comment about
	libtool scripts.

	* lib/texinfo.tex: New upstream version.

2004-07-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Remove `.' from the mkdir_p
	definition, it causes `make install' to fails for user with no
	right to write in the source-tree.
	* automake.in (handle_configure): Do not use mkdir_p in the
	definition for $(mkdir_p).
	Report from Harlan Stenn.

	* lib/am/texi-vers.am (%STAMPVTI%): Typo in comment.

2004-07-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Libtool Modules): Typo in example.
	Report from Ulrich Eckhardt.

2004-07-21  Andreas Schwab  <schwab@suse.de>  (tiny change)
