@@ -245,6 +245,7 @@ gnits2.test \
 gnits3.test \
 header.test \
 help.test \
+hosts.test \
 implicit.test \
 include.test \
 include2.test \
