@@ -1,0 +1,59 @@
+#! /bin/sh
+# Copyright (C) 2004  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Test to make sure automake correctly recognizes presence of
+# AC_CANONICAL_(BUILD|HOST|SYSTEM|TARGET), and creates config.* in all
+# those cases.
+# From Norman Gray.
+
+. ./defs || exit 1
+
+set -e
+
+: >Makefile.am
+
+$ACLOCAL
+$AUTOMAKE --add-missing
+test ! -f config.guess
+test ! -f config.sub
+
+# Test all four of the AC_CANONICAL_* targets, including _SYSTEM, which is
+# supported but deprecated by autoconf.
+for macro in AC_CANONICAL_BUILD AC_CANONICAL_HOST \
+             AC_CANONICAL_SYSTEM AC_CANONICAL_TARGET
+do
+  rm -rf autom4te.cache config.sub config.guess
+
+  cat >configure.in<<EOF
+AC_INIT([hosts], [1.0])
+$macro
+AM_INIT_AUTOMAKE
+AC_CONFIG_FILES([Makefile])
+EOF
+
+  $ACLOCAL
+  $AUTOMAKE --add-missing
+
+  # Show the files which were installed
+  ls
+
+  test -f config.guess
+  test -f config.sub
+done
