@@ -1,3 +1,14 @@
+2004-08-02  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM): Replace by ...
+	(AC_CANONICAL_BUILD, AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM): ... these.
+	(scan_autoconf_traces): Scan for the latter three macros instead of
+	the former two.
+	(make_paragraphs): Adjust definitions of %BUILD%, %HOST%, and %TARGET%.
+	* tests/hosts.test: New file.
+	* tests/Makefile.am (TESTS): Add hosts.test.
+	Report and test case from Norman Gray.
+
 2004-08-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* aclocal.in (scan_file): Update "#Extending%20aclocal" URL, makeinfo
